# haskell

./: RPN.hs  Return.hs  ReverseWords.hs  Scotty.hs  State.hs  Todo  Todo.hi  Todo.hs  Tofu.hs  YesNo.hs  haskell-sandbox.cabal  todo.txt
Applicative/: Instances.hs
ApplyingStructure/: Shortener.hs  TVar.hs
Arjen/: Json.hs
Domains/: Phantom.hs  Suppliers.hs
Foldable/: Foldable.hs  LibraryFunctions.hs
Functors/: IO.hs
LearnYouA/: Either.hs  Functor.hs  IO.hs  Pole.hs  RPN.hs  Return.hs  ReverseWords.hs  Stack.hs  When.hs  Writer.hs
Lisp/: Eval.hs  Repl.hs
Newtype/: Newtype.hs
Testing/: Addition.hs  Division.hs  HalfIdentity.hs  Other.hs  WordNumber.hs  WordNumberSpec.hs
Traversable/: Exercises.hs  HttpStuff.hs  Main.hs
Web/: DocumentStore.hs  Documents.hs  HitCounter.hs
rekenen/: Fractional.hs
src/: Pause.hs  Transformers.hs
