name:                haskell-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Rein van der Woerd
maintainer:          example@example.com
copyright:           2017 Rein van der Woerd
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       mtl
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/reinvdwoerd/haskell
